# TrackWay

./: .gitignore  TRACKIESOURCE.md  pyproject.toml
config/: settings.yml
notebooks/: 01_model_testing.ipynb  02_data_analysis.ipynb
scripts/: download_models.py  setup_config.py
src/trackie/: main.py
src/trackie/config/: settings.py
src/trackie/core/: application.py
src/trackie/processing/: calculations.py
src/trackie/services/audio/: microphone.py  speaker.py
src/trackie/services/llm/: base.py  factory.py
src/trackie/services/video/: camera.py
src/trackie/services/vision/: depth_estimator.py  face_recognizer.py  object_detector.py
src/trackie/tools/: handlers.py
src/trackie/ui/: preview.py
